# riichi-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  dev.sh  pyproject.toml
.github/workflows/: preview-cleanup.yml  preview-deploy.yml
api/: AGENTS.md  main.py  pyproject.toml  pyrightconfig.json  test_model.py
api/src/: test_tile.py  tile.py  tile_utils.py
api/src/hand_calculation/: __init__.py  calculation.py  schemas.py  test_calculation.py  test_schemas.py
api/src/tile_detection/: __init__.py  detection.py  schemas.py  test_detection.py  test_schemas.py
config/: deploy.preview.yml  deploy.yml
config/cloud-config/: cloud-config.yml
designs/: design.pen
frontend/: .oxfmtrc.json  .oxlintrc.json  AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
frontend/e2e/: app.spec.ts  hand-confirmation.spec.ts  hand-editor.spec.ts  hand-scoring.spec.ts
frontend/e2e/mocks/: handlers.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: detect.ts  evaluate.ts
frontend/src/components/: CameraCapture.tsx  DetectionResult.tsx  HandConfirmation.css  HandConfirmation.tsx  HandScoring.css  HandScoring.tsx  ImageDropZone.tsx
frontend/src/components/hand-editor/: HandEditor.css  HandEditor.tsx  HandGrid.tsx  ScoreResult.tsx  ScoringOptions.tsx  TilePickerOverlay.tsx  WinTileRow.tsx
frontend/src/constants/: tiles.ts
frontend/src/types/: api.ts
frontend/src/utils/: TileFont.ts  flippedIndexRemap.ts  handFromDetection.ts  meldInference.ts
model/: main.py  pyproject.toml  train.py
scripts/: test-docker.sh
