[project]
name = "riichi-app"
version = "0.1.0"
description = "Tools to track and aid with live Riichi Mahjong game sessions"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["api", "model"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
